--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "@mdi/font": "7.0.96",
     "pinia": "^2.0.28",
+    "pinia-plugin-persistedstate": "^3.0.1",
     "roboto-fontface": "*",
+    "vite-plugin-pwa": "^0.14.0",
     "vue": "^3.2.38",
     "vue-router": "^4.1.6",
     "vuetify": "^3.0.0",
@@ -17,18 +19,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.0.3",
+    "@volar/vue-language-plugin-pug": "^1.0.13",
     "@vue/eslint-config-standard": "^8.0.1",
     "eslint": "^8.29.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-standard": "^5.0.0",
     "eslint-plugin-vue": "^9.8.0",
     "eslint-plugin-vue-pug": "^0.5.5",
     "pug": "^3.0.2",
     "sass": "^1.56.2",
     "vite": "^3.1.9",
-    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-vuetify": "^1.0.0-alpha.12"
   }
 }
